# swatahVision

./: .gitignore  404.html  LICENCE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
annotators/box/: index.html
annotators/heatmap/: index.html
annotators/label/: index.html
docs/: index.md
docs/annotators/: box.md  color.md  heatmap.md  label.md  trace.md
docs/examples/: age_gender.md  count_people_in_zone.md  heatmap_tracking.md  pose_estimation.md  speed_estimation.md  time_in_zone.md  tracking.md  traffic_analysis.md
docs/getting_started/: install.md
docs/runtime/: onnx.md  openvino.md
docs/trackers/: bytetrack.md
examples/age_gender_detection/: README.md  age-gender-recognition-retail-0013_openvino.py
examples/count_people_in_zone/: README.md  index.html  requirements.txt  yolov11x-1280_onnx.py
examples/emotions_detection/: README.md  emotions-recognition-retail-0003_openvino.py  requirements.txt
examples/heatmap_and_track/: README.md  yolov11x-1280_onnx.py
examples/pose_estimation/: README.md  movenet_onnx.py  requirements.txt
examples/speed_estimation/: README.md  index.html  yolov11x-1280_onnx.py  yolov11x-1280_openvino.py
examples/time_in_zone/: README.md  yolov8x-1280_onnx.py
examples/tracking/: README.md  byte_track.py  requirements.txt  yolov8x-1280_onnx.py  yolov8x-1280_openvino.py
examples/traffic_analysis/: README.md  yolov11x-1280_onnx.py
getting_started/install/: index.html
model_zoo/BlazeFace/: prepare_blazeface_onnx.py
model_zoo/mobilenet/: mobilenetv2_onnx.py  mobilenetv2_openvino.py
model_zoo/movenet/: movenet_onnx.py
model_zoo/resnet/: resnet18_onnx.py  resnet18_openvino.py
model_zoo/retinanet/: retinanet-resnet50-fpn_onnx.py  retinanet-resnet50-fpn_openvino.py
model_zoo/ssd/: ssdlite-mobilenetv3_onnx.py  ssdlite-mobilenetv3_openvino.py
model_zoo/yolo/: yolov8n_onnx.py
runtime/: index.html
runtime/onnx/: index.html
runtime/openvino/: index.html
runtime/tflite/: index.html
search/: search_index.json
swatahvision/: __init__.py  config.py  constraints.py
swatahvision/annotators/: base.py  box.py  color.py  hitmap.py  (+3 more)
tests/: onnx_export.py
(+60 files in other folders)
